Fix: update __weekDaysSelector grid & __timeinput to display __timeinput in a row and not out of the screen on mobile devices

--- a/components/Create/wizard/Wizard.module.scss
+++ b/components/Create/wizard/Wizard.module.scss
@@ -500,7 +500,20 @@
   }
 
   .step3 {
-    padding: 5rem;
+    padding: 1rem;
+
+    &__weekDaysSelector {
+      margin-top: 3rem;
+      display: grid;
+      grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: repeat(1, 1fr);
+      height: 70rem;
+    }
+
+    &__timeInput {
+      grid-column: 1 / 1;
+      grid-row: 3/3;
+    }
   }
 
   .step5 {
